--- a/web0322/WebContent/style/index.html
+++ b/web0322/WebContent/style/index.html
@@ -16,6 +16,7 @@
 	<li><a href="../html/index.html">홈으로</a></li>
 	<li><a href="selector.html">선택자실습</a></li>
 	<li><a href="text.html">텍스트관련스타일</a></li>
+	<li><a href="./box.html">박스모델</a></li>
 </ul>
 
 <h2>스타일 지정 실습</h2>
