--- a/web0322/WebContent/ex/ex_03.html
+++ b/web0322/WebContent/ex/ex_03.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>p163</title>
+<link rel="stylesheet" href="../css/mypage.css">
 <style>
 	ul { list-style: none; padding-left: 10px; height: 180px}
 	#box {
@@ -15,6 +16,7 @@
 </style>
 </head>
 <body>
+<a class="btn" href="index.html">HOME</a>
 <div id="box">
 <h2>예약 정보</h2>
 <form>
