--- a/web0322/WebContent/ex/ex_02.html
+++ b/web0322/WebContent/ex/ex_02.html
@@ -3,13 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <title>p120</title>
+<link rel="stylesheet" href="../css/mypage.css">
 <style>
 	table th,td { border: 1px solid #222}
 </style>
 
 </head>
 <body>
-
+<a class="btn" href="index.html">HOME</a>
 <h1>수습 국원 지원 양식</h1>
 
 <table  >
