--- a/web0322/WebContent/ex/index.html
+++ b/web0322/WebContent/ex/index.html
@@ -3,11 +3,21 @@
 <head>
 <meta charset="UTF-8">
 <title>exercise</title>
+<link rel="stylesheet" href="../css/mypage.css">
+<style>
+	a { display: block;}
+</style>
 </head>
 <body>
-	<a href="ex_01.html">4장 1번 실습문제</a>
-	<a href="ex_02.html">4장 2번 실습문제</a>
-	<a href="ex_02.html">5장 1번 실습문제</a>
-	<a href="ex_02.html">5장 2번 실습문제</a>
+<a class="btn" href="../html/index.html">index</a>
+
+<ol>
+	<li><a href="ex_01.html">4장 1번 실습문제</a></li>
+	<li><a href="ex_02.html">4장 2번 실습문제</a></li>
+	<li><a href="ex_03.html">5장 1번 실습문제</a></li>
+	<li><a href="ex_04.html">5장 2번 실습문제</a></li>
+	<li><a href="ex_05.html">6장 1번 실습문제</a></li>
+	<li><a href="ex_06.html">6장 2번 실습문제</a></li>
+</ol>
 </body>
 </html>
