--- a/web0322/WebContent/ex/index.html
+++ b/web0322/WebContent/ex/index.html
@@ -18,6 +18,9 @@
 	<li><a href="ex_04.html">5장 2번 실습문제</a></li>
 	<li><a href="ex_05.html">6장 1번 실습문제</a></li>
 	<li><a href="ex_06.html">6장 2번 실습문제</a></li>
+	<li><a href="ex_07.html">7장 1번 실습문제</a></li>
+	<li><a href="ex_08.html">7장 2번 실습문제</a></li>
+	<li><a href="ex_09.html">7장 3번 실습문제</a></li>
 </ol>
 </body>
 </html>
