--- a/web0322/WebContent/ex/ex_10.html
+++ b/web0322/WebContent/ex/ex_10.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>p291 8장 3번 실습문제</title>
+<link rel="stylesheet" href="../css/mypage.css">
 <style>
 	ul li { list-style: none; float:left;}
 	a { text-decoration: none; color: #222; display: block; background-color: #ccc; padding: 10px 20px;}
@@ -10,6 +11,7 @@
 </style>
 </head>
 <body>
+<a class="btn" href="../ex/index.html">index</a>
 <ul>
 	<li><a>메뉴1</a></li>
 	<li><a>메뉴2</a></li>
