--- a/web0322/WebContent/ex/index.html
+++ b/web0322/WebContent/ex/index.html
@@ -21,6 +21,8 @@
 	<li><a href="ex_07.html">7장 1번 실습문제</a></li>
 	<li><a href="ex_08.html">7장 2번 실습문제</a></li>
 	<li><a href="ex_09.html">7장 3번 실습문제</a></li>
+	<li><a href="ex_10.html">8장 3번 실습문제</a></li>
+	<li><a href="ex_11.html">8장 2번 실습문제</a></li>
 </ol>
 </body>
 </html>
