--- a/web0322/WebContent/style/index.html
+++ b/web0322/WebContent/style/index.html
@@ -17,6 +17,9 @@
 	<li><a href="selector.html">선택자실습</a></li>
 	<li><a href="text.html">텍스트관련스타일</a></li>
 	<li><a href="./box.html">박스모델</a></li>
+	<li><a href="./menu.html">메뉴</a></li>
+	<li><a href="./position.html">위치</a></li>
+	<li><a href="./layout1.html">레이아웃1</a></li>
 </ul>
 
 <h2>스타일 지정 실습</h2>
