--- a/web0322/WebContent/html/index.html
+++ b/web0322/WebContent/html/index.html
@@ -9,6 +9,7 @@
 <a href=" ../style/index.html">스타일(css)실습</a>
 <a href=" ../style/selector.html">선택자실습</a>
 <a href=" ../style/ul.html">ul 실습</a>
+<a href=" ../selector/index.html">선택자</a>
 
 	<h2>제목표시</h2>
 <!-- 
