--- a/web0322/WebContent/selector/input.html
+++ b/web0322/WebContent/selector/input.html
@@ -2,18 +2,55 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>입력양식선택자</title>
+<style>
+	input[type=text], input[type=password] { height: 25px; }
+	input[type=checkbox] { width: 20px; height: 20px; vertical-align: middle; }
+	/*
+	input[type=radio] { margin: 15px; }
+	input[type=radio] { margin-right: 0; }
+	*/
+	input[type=radio] { margin: 15px 0 15px 15px; }
+	input:enabled { background-color: blue; }
+	input:disabled { color: blue; font-weight: bold;}
+	input:focus { background-color: green;}
+	/* checked된 곳 바로 다음에 오는 label */
+	/* input:checked + label { color: green; font-weight: bold; } */
+	/* radio와 checkbox 각각 checked를 지정하려면 */
+	input[type=radio]:checked + label { color: fuchsia; font-weight: bold;}
+	input[type=checkbox]:checked + label { color: orange; font-weight: bold;}
+	
+	ul li:hover { background-color: orange;}
+	ul li:active { background-color: purple;}
+	
+</style>
+
 </head>
 <body>
 <a href="./index.html">홈으로</a>
+
+<!-- 
+동작이나 상태와 관련된 가상클래스 (pp336~340)
+선택자:enabled 	활성화된 선택자(입력 또는 선택이 가능한)
+선택자:disabled 	비활성화된 선택자(입력 또는 선택이 불가능한)
+선택자:checked 	체크박스나 라디오버튼에서 체크된 선택자
+선택자:focus 		커서를 갖는 선택자
+선택자:hover		마우스를 올렸을 때 선택된 선택자
+선택자:active		클릭하고있는 동안 선택된 선택자
+-->
+
 <h3>입력양식 선택자</h3>
 <ul>
-	<li>성명: <input type="text" name="name" value="홍길동"></li>
+	<li>성명: <input type="text" disabled name="name" value="홍길동"></li>
 	<li>아이디: <input type="text" name="id"></li>
 	<li>비밀번호: <input type="password" name="pw"></li>
-	<li>성별: <input type="radio" name="gender" value="남" id="male"><label for="male">남</label>
-			<input type="radio" name="gender" value="여" id="female"><label for="female">여</label></li>
-	<li>취미: <input type="checkbox" name="hobby" value=""></li>
+	<li>성별: <input type="radio" checked name="gender" value="남" id="male"><label for="male">남</label>
+			 <input type="radio" name="gender" value="여" id="female"><label for="female">여</label></li>
+	<li>취미: <input type="checkbox" name="hobby" id="hobby1" value="독서"><label for="hobby1">독서</label>
+			 <input type="checkbox" checked name="hobby" id="hobby2" value="게임"><label for="hobby2">게임</label>
+			 <input type="checkbox" name="hobby" id="hobby3" value="유튜브"><label for="hobby3">유튜브</label>
+			 <input type="checkbox" name="hobby" id="hobby4" value="웹툰"><label for="hobby4">웹툰</label>
+	</li>
 </ul>
 
 </body>
