--- a/web0322/WebContent/trans/index.html
+++ b/web0322/WebContent/trans/index.html
@@ -7,5 +7,7 @@
 <body>
 <a href="./trans.html">transform</a>
 <a href="./slide1.html">이미지 이동 실습</a>
+<a href="./slide2.html">이미지 이동 실습</a>
+<a href="./animate.html">animation</a>
 </body>
 </html>
