--- a/web0322/WebContent/trans/slide2.html
+++ b/web0322/WebContent/trans/slide2.html
@@ -2,44 +2,26 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>이미지슬라이드실습</title>
+<title>Insert title here</title>
+<link rel="stylesheet" href="../css/slide.css">
 <style>
-img { width: 300px; height: 200px; }
-ul { list-style: none; margin: 0; padding: 0;}
-ul li { float: left; margin: 20px;}
-ul li:not(last-child) { margin-right: 0;}
-
-.slide-wrap { width: 660px; height: 240px;
-			border: 1px solid #000; 
-			position: relative;
-			overflow: hidden;
-}
-.slide { position: absolute;
-		width: 1940px;	height: 240px;
-		
-}
-
-#transform .slide:hover { 
-		/* transform: translateX(-320px); */
-		transform: translateX(-640px);
-}
-#transform .slide:active {
-		/* transform: translateX(-640px); */
+	#transform .slide {
+		transition-property: transform;
+		transition-duration: 16s;
+		transition-delay: 2s;
+		transition-timing-function: steps(4, start);
+	}
+	#transform .slide:hover {
 		transform: translateX(-1280px);
-}
-
-#transform2 .slide-wrap {
-		margin-top: 50px;
-		width: 980px;
-}
-#transform2 .slide:hover { 
-		transform: translateX(-320px);
-}
-#transform2 .slide:active {
-		transform: translateX(-640px);
-}
-
-
+	}
+	#transform2 .slide-wrap { width: 980px; }
+	#transform2 .slide{
+		/* property name | duration | timing-function | delay*/
+		transition: transform 9s steps(3,start) 2s;
+	}
+	#transform2 .slide:hover {
+		transform: translateX(-960px);
+	}
 </style>
 </head>
 <body>
