--- a/web0322/WebContent/style/hrd.html
+++ b/web0322/WebContent/style/hrd.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
+<meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
 <title>NCS소개 답</title>
 <style>
 	body { margin: 0;}		/* body의 기본 마진을 없앤다 */
@@ -95,7 +95,51 @@
 	
 	.left, .right {display: inline-block; vertical-align: top; }
 	.left img {padding: 40px; width: 100px; height: 100px;}
-
+	
+	
+	
+	#k-digital { 
+		width: 1240px;
+		margin: 10px auto;
+	}
+	.slide-wrap {
+		width: 1240px;
+		height: 170px;
+		position: relative;
+		overflow: hidden;
+	}
+	.slide ul {
+		list-style: none;
+		margin: 0; padding: 0;
+	}
+	.slide ul li {
+		float: left; box-sizing: border-box;
+		background-color: #f5f6ff;	
+	}
+	.slide li:not(last-child) { margin-right: 20px;}
+	.slide { 
+		position: absolute; width: 2500px;
+		height: 170px;
+	}
+	.training { 
+		width: 400px; height: 170px; 
+		border: 1px solid #ddd;
+	}
+	.training div { margin: 15px; }
+	.training img {
+		float: left; width: 50px; height: 50px;
+	}
+	.training strong { line-height: 50px; margin-left: 10px;}
+	.training p { font-size: 15px;}
+	
+	#k-digital .slide {
+		animation: k-digital 9s steps(3, start) 3s infinite;
+	}
+	@keyframes k-digital {
+		from { left:0; } to { left: -1260px;}
+	}
+	
+	
 
 
 
@@ -205,6 +249,7 @@
 		</ul>
 	</nav>
 </header>
+
 <section>
 	<h1>NCS분류체계</h1>
 	<p>NCS(국가직무능력표준)에 대한 정보를 자세히 확인하실 수 있습니다.</p>
@@ -261,7 +306,47 @@
 	</tbody>
 	</table>
 	</article>
-	
+	<article>
+	<h4>K-디지털 트레이닝(K-Digital Training)</h4>
+		<div id="k-digital">
+	<div class="slide-wrap">
+		<div class="slide">
+			<ul>
+				<li class="training">
+					<div><img src="../images/icon1.png"><strong>빅데이터</strong>
+					<p>특정 목적을 위한 정형/비정형 데이터의 생성, 수집, 축적, 정제, 분석, 시각화에 필요한 기술 및 시스템, S/W개발과 응용 서비스에 관련된 분야</p>
+					</div>
+				</li>
+				<li class="training">
+					<div><img src="../images/icon2.png"><strong>사물 인터넷</strong>
+					<p>센서, 통신과 컴퓨팅 기능을 갖춘 단말 장치를 활용하기 위한 기반 기술 및 장비, S/W, 시스템 개발과 응용서비스에 관련된 분야</p>
+					</div>
+				</li>
+				<li class="training">
+					<div><img src="../images/icon1.png"><strong>스마트 제조</strong>
+					<p>가상물리 시스템을 기반으로 로봇 IoT, 인공지능 등 신기술을 활용하여 제조공정을 고도화하는 기술 및 시스템의 개발, 구축, 운용에 관련된 분야</p>
+					</div>
+				</li>
+				<li class="training">
+					<div><img src="../images/icon2.png"><strong>빅데이터</strong>
+					<p>특정 목적을 위한 정형/비정형 데이터의 생성, 수집, 축적, 정제, 분석, 시각화에 필요한 기술 및 시스템, S/W개발과 응용 서비스에 관련된 분야</p>
+					</div>
+				</li>
+				<li class="training">
+					<div><img src="../images/icon1.png"><strong>사물 인터넷</strong>
+					<p>센서, 통신과 컴퓨팅 기능을 갖춘 단말 장치를 활용하기 위한 기반 기술 및 장비, S/W, 시스템 개발과 응용서비스에 관련된 분야</p>
+					</div>
+				</li>
+				<li class="training">
+					<div><img src="../images/icon2.png"><strong>스마트 제조</strong>
+					<p>가상물리 시스템을 기반으로 로봇 IoT, 인공지능 등 신기술을 활용하여 제조공정을 고도화하는 기술 및 시스템의 개발, 구축, 운용에 관련된 분야</p>
+					</div>
+				</li>
+			</ul>
+		</div>
+	</div>
+</div>
+	</article>
 	<article>
 	<h4>NCS분류체계</h4>
 	<table id="ncs">
